markup updates to match actual header and footer. still need styles

--- a/source/_patterns/01-molecules/05-navigation/00-primary-nav.mustache
+++ b/source/_patterns/01-molecules/05-navigation/00-primary-nav.mustache
@@ -1,8 +1,9 @@
-<nav id="nav" class="nav">
-	<ul class="nav-list">
-		<li><a href="{{ url }}">Home</a></li>
-		<li><a href="{{ url }}">About</a></li>
-		<li><a href="{{ url }}">Blog</a></li>
-		<li><a href="{{ url }}">Contact</a></li>
-	</ul>
-</nav><!--end .nav-->
+<nav id="topNav">
+    <ul>
+        <li><a href="#">home</a></li>
+        <li><a href="#">blog</a></li>
+        <li><a href="#">gallery</a></li>
+        <li><a href="#">contact</a></li>
+        <li><a href="#">about</a></li>
+    </ul>
+</nav>
