--- a/source/_patterns/02-organisms/00-global/01-footer.mustache
+++ b/source/_patterns/02-organisms/00-global/01-footer.mustache
@@ -1,7 +1,3 @@
-<!-- Begin Footer -->
-<footer class="footer" role="contentinfo">
-	<div class="lc">
-		<p class="copyright">&copy; 2013 Company Name. All rights reserved.</p>
-	</div>
+<footer id="pageFooter">
+    Copyright 2005-2015 &copy; Matt Travi
 </footer>
-<!-- End Footer -->
