--- a/source/_patterns/02-organisms/00-global/00-header.mustache
+++ b/source/_patterns/02-organisms/00-global/00-header.mustache
@@ -1,9 +1,4 @@
-<!-- Begin .header -->
-<header class="header cf" role="banner">
-	{{> atoms-logo }}
-	<a href="#search-form" class="nav-toggle nav-toggle-search icon-search"><span class="is-vishidden">Search</span></a>
-	<a href="#nav" class="nav-toggle nav-toggle-menu icon-menu"><span class="is-vishidden">Menu</span></a>
-	{{> molecules-primary-nav }}
-	{{> molecules-search }}
+{{> molecules-primary-nav }}
+<header id="pageHeader>
+    <h1><a href="#">{{> atoms-logo }}</a></h1>
 </header>
-<!-- End .header -->
