--- a/source/css/scss/travi/_variables.scss
+++ b/source/css/scss/travi/_variables.scss
@@ -1,7 +1,7 @@
 $theme-black: #000;
 $theme-red: #c80000;
 
-$dark-red: #c80000;
+$dark-red: $theme-red;
 $light-grey: #c0c0c0;
 $lighter-grey: #e0e0e0;
 $off-white: #d7d6d6;
