--- a/source/css/scss/travi/_header_d.scss
+++ b/source/css/scss/travi/_header_d.scss
@@ -1,6 +1,6 @@
 header {
     padding: 0;
-    background: transparent url('/resources/img/titleBanners/truckApex.jpg') no-repeat;
+    background: transparent url($resources-directory + 'img/titleBanners/truckApex.jpg') no-repeat;
     border-top: 1px solid #000;
     height: 200px;
 
