--- a/source/css/scss/travi/travi.scss
+++ b/source/css/scss/travi/travi.scss
@@ -18,6 +18,7 @@ $resources-directory: "../";
 @import "wrap_d";
 
 @import "homepage";
+@import "homepage_d";
 
 
 #organisms-header .sg-pattern-body {
