--- a/source/css/scss/travi/_homepage.scss
+++ b/source/css/scss/travi/_homepage.scss
@@ -9,3 +9,40 @@
     background-image: url($resources-directory + '/img/bg/bg-7_trans.png');
     padding: 3px;
 }
+
+
+
+
+
+
+//TODO: clean this up
+div.entry > div.entry {
+    padding: 0;
+    font-size: 1em;
+    border: medium none;
+}
+
+dl dd.entry-date {
+    margin-top: 2px;
+    margin-left: 5px;
+    padding-bottom: 3px;
+    font-style: italic;
+    font-size: .8em;
+}
+
+dt.entry-title a,
+dt.entry-title {
+    background: transparent;
+}
+
+div.entry:after {
+    content: '.';
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
+}
+
+dl.entry-message {
+    font-family: "Trebuchet MS", sans-serif;
+}
