listed more colors from a quick survey of current theme style sheets

--- a/source/_patterns/00-atoms/01-global/00-colors.mustache
+++ b/source/_patterns/00-atoms/01-global/00-colors.mustache
@@ -1,10 +1,50 @@
 <ul class="sg-colors">
 	<li>
+		<span class="sg-swatch" style="background: #f00;"></span>
+		<span class="sg-label">#f00</span>
+	</li>
+	<li>
 		<span class="sg-swatch" style="background: #c80000;"></span>
 		<span class="sg-label">#c80000</span>
 	</li>
 	<li>
 		<span class="sg-swatch" style="background: #000000;"></span>
 		<span class="sg-label">#000000</span>
+	</li>
+	<li>
+		<span class="sg-swatch" style="background: #252429;"></span>
+		<span class="sg-label">#252429</span>
+	</li>
+	<li>
+		<span class="sg-swatch" style="background: #818181;"></span>
+		<span class="sg-label">#818181</span>
+	</li>
+	<li>
+		<span class="sg-swatch" style="background: #888;"></span>
+		<span class="sg-label">#888</span>
+	</li>
+	<li>
+		<span class="sg-swatch" style="background: #969696;"></span>
+		<span class="sg-label">#969696</span>
+	</li>
+	<li>
+		<span class="sg-swatch" style="background: #c0c0c0;"></span>
+		<span class="sg-label">#c0c0c0</span>
+	</li>
+	<li>
+		<span class="sg-swatch" style="background: #ccc;"></span>
+		<span class="sg-label">#ccc</span>
+	</li>
+	<li>
+		<span class="sg-swatch" style="background: #e0e0e0;"></span>
+		<span class="sg-label">#e0e0e0</span>
+	</li>
+	<li>
+		<span class="sg-swatch" style="background: #eee;"></span>
+		<span class="sg-label">#eee</span>
+	</li>
+	<li>
+		<span class="sg-swatch" style="background: #ffffff;"></span>
+		<span class="sg-label">#ffffff</span>
 	</li>
 </ul>
