added js for button enhancement. still need jquery-ui theme to be included

--- a/source/_patterns/00-atoms/00-meta/_01-foot.mustache
+++ b/source/_patterns/00-atoms/00-meta/_01-foot.mustache
@@ -1,6 +1,10 @@
 
 	<!--DO NOT REMOVE-->
 	{% pattern-lab-foot %}
-
+		<script src="../../thirdparty/jquery/jquery.js"> </script>
+		<script src="../../thirdparty/jquery-ui/jquery-ui.js"> </script>
+		<script src="../../thirdparty/jsrender/jsrender.js"> </script>
+		<script src="../../thirdparty/travi-core/dist/travi-core.min.js"> </script>
+		<script src="../../thirdparty/travi-ui/dist/form.min.js"> </script>
 	</body>
 </html>
