--- a/source/_patterns/00-atoms/00-meta/_00-head.mustache
+++ b/source/_patterns/00-atoms/00-meta/_00-head.mustache
@@ -6,12 +6,14 @@
 		<meta name="viewport" content="width=device-width" />
 
 		<link rel="stylesheet" href="../../css/style.css?{{ cacheBuster }}" media="all" />
-        <link type="text/css" rel="stylesheet" media="screen" href="//fonts.googleapis.com/css?family=Permanent+Marker:regular">
+        <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Permanent+Marker:regular">
 		<link rel="stylesheet" href="../../css/travi.css?{{ cacheBuster }}" media="all" />
 
 		<!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
 		{% pattern-lab-head %}
 		<!-- End Pattern Lab -->
+
+		<script src="../../thirdparty/travi-core/thirdparty/modernizr.js"> </script>
 
 	</head>
 	<body class="{{ bodyClass }}">
