--- a/source/_patterns/00-atoms/06-buttons/00-buttons.mustache
+++ b/source/_patterns/00-atoms/06-buttons/00-buttons.mustache
@@ -1,3 +1,4 @@
+<p><input type="submit" value="Submit Button"/></p>
 <p><a href="#" class="btn">Button</a></p>
 <p><a href="#" class="btn alt">Alternate Button</a></p>
 <p><a href="#" class="btn disabled">Disabled Button</a></p>
