added submit button styles

--- a/source/css/scss/travi/travi.scss
+++ b/source/css/scss/travi/travi.scss
@@ -20,6 +20,8 @@ $resources-directory: "../";
 @import "homepage";
 @import "homepage_d";
 
+@import "jquery-ui-theme";
+
 
 #organisms-header .sg-pattern-body {
     width: $wrap-width;
