pulled in the travi.org-theme package and started replacing old files

--- a/source/css/scss/travi/travi.scss
+++ b/source/css/scss/travi/travi.scss
@@ -8,8 +8,8 @@ $resources-directory: "../";
 
 @import "headings";
 
-@import "header";
-@import "header_d";
+@import "../../../resources/thirdparty/travi.org-theme/dist/css/theme.css";
+@import "../../../resources/thirdparty/travi.org-theme/dist/css/theme_d.css";
 
 @import "footer";
 @import "footer_d";
