fixed the path for loading modernizr

--- a/source/_patterns/00-atoms/00-meta/_00-head.mustache
+++ b/source/_patterns/00-atoms/00-meta/_00-head.mustache
@@ -13,7 +13,7 @@
 		{% pattern-lab-head %}
 		<!-- End Pattern Lab -->
 
-		<script src="../../thirdparty/travi-core/thirdparty/modernizr.js"> </script>
+		<script src="/resources/thirdparty/travi-core/thirdparty/modernizr.js"> </script>
 
 	</head>
 	<body class="{{ bodyClass }}">
