--- a/source/_patterns/00-atoms/00-meta/_00-head.mustache
+++ b/source/_patterns/00-atoms/00-meta/_00-head.mustache
@@ -8,7 +8,16 @@
 		<link rel="stylesheet" href="../../css/style.css?{{ cacheBuster }}" media="all" />
         <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Permanent+Marker:regular">
 		<link rel="stylesheet" href="../../css/travi.css?{{ cacheBuster }}" media="all" />
-
+		<script type="text/javascript" src="/resources/thirdparty/travi-styles/dist/css/icons/grunticon.loader.js"> </script>
+		<script>
+		    grunticon([
+		        "/resources/thirdparty/travi-styles/dist/css/icons/icons.data.svg.css",
+		        "/resources/thirdparty/travi-styles/dist/css/icons/icons.data.png.css",
+		        "/resources/thirdparty/travi-styles/dist/css/icons/icons.fallback.css"
+		    ]);
+		</script>
+		<noscript><link href="/resources/thirdparty/travi-styles/dist/css/icons/icons.fallback.css" rel="stylesheet"></noscript>
+		
 		<!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
 		{% pattern-lab-head %}
 		<!-- End Pattern Lab -->
