--- a/source/_patterns/00-atoms/00-meta/_01-foot.mustache
+++ b/source/_patterns/00-atoms/00-meta/_01-foot.mustache
@@ -1,12 +1,12 @@
 
 	<!--DO NOT REMOVE-->
 	{% pattern-lab-foot %}
-		<script src="../../resources/thirdparty/jquery/jquery.js"> </script>
-		<script src="../../resources/thirdparty/jquery-ui/jquery-ui.js"> </script>
-		<script src="../../resources/thirdparty/jsrender/jsrender.js"> </script>
-		<script src="../../resources/thirdparty/jquery-migrate/jquery-migrate.js"> </script>
-		<script src="../../resources/thirdparty/wymeditor/dist/wymeditor/jquery.wymeditor.min.js"> </script>
-		<script src="../../resources/thirdparty/travi-core/dist/travi-core.min.js"> </script>
-		<script src="../../resources/thirdparty/travi-ui/dist/form.min.js"> </script>
+		<script src="/resources/thirdparty/jquery/jquery.js"> </script>
+		<script src="/resources/thirdparty/jquery-ui/jquery-ui.js"> </script>
+		<script src="/resources/thirdparty/jsrender/jsrender.js"> </script>
+		<script src="/resources/thirdparty/jquery-migrate/jquery-migrate.js"> </script>
+		<script src="/resources/thirdparty/wymeditor/jquery.wymeditor.min.js"> </script>
+		<script src="/resources/thirdparty/travi-core/dist/travi-core.min.js"> </script>
+		<script src="/resources/thirdparty/travi-ui/dist/form.min.js"> </script>
 	</body>
 </html>
