--- a/source/_patterns/02-organisms/00-global/00-header.mustache
+++ b/source/_patterns/02-organisms/00-global/00-header.mustache
@@ -1,4 +1,4 @@
 {{> molecules-primary-nav }}
 <header id="pageHeader">
-    <h1><a href="#">{{> atoms-logo }}</a></h1>
+    {{> atoms-logo }}
 </header>
