atoms for carousel scroll buttons

--- a/source/css/scss/travi/travi.scss
+++ b/source/css/scss/travi/travi.scss
@@ -16,6 +16,8 @@ $resources-directory: "../";
 
 @import "jquery-ui-theme";
 
+@import "../../../resources/thirdparty/travi.org-theme/scss/gallery/gallery_d";
+
 
 #organisms-header .sg-pattern-body {
     width: $wrap-width;
