consumed the carousel partial in the homepage template

--- a/source/_patterns/03-templates/00-homepage.mustache
+++ b/source/_patterns/03-templates/00-homepage.mustache
@@ -8,7 +8,7 @@
             <div id="recentThumbs">
                 <h3 class="entry-title"><a href="gallery">Recent Photos</a></h3>
                 <div id="thumbContainer" class="entry-message">
-                    <ul id="thumbs"></ul>
+                    {{> organisms-carousel }}
                 </div>
             </div>
             <div class="updateList" id="blogList">
