differenciated the gallery template and page example

--- a/source/_patterns/03-templates/01-gallery.mustache
+++ b/source/_patterns/03-templates/01-gallery.mustache
@@ -15,7 +15,8 @@
             <div id="imageContainer" class="image" style="height: 1202px;">
                 <a href="http://lh3.ggpht.com/-VE8hsthxHew/URp7ew4R0eI/AAAAAAAAKtE/CUphJOhe5No/s1600/IMG_0866.JPG">
                     <div class="preview" style="display: inline; width: 600px; height: 1200px;">
-                        <img id="preview_pos" alt="preview" class="reflected" src="http://lh3.ggpht.com/-VE8hsthxHew/URp7ew4R0eI/AAAAAAAAKtE/CUphJOhe5No/w600/IMG_0866.JPG" style="vertical-align: bottom;">
+                        {{> atoms-landscape-4x3 }}
+                        <!-- <img id="preview_pos" alt="preview" class="reflected" src="http://lh3.ggpht.com/-VE8hsthxHew/URp7ew4R0eI/AAAAAAAAKtE/CUphJOhe5No/w600/IMG_0866.JPG" style="vertical-align: bottom;"> -->
                         <canvas height="400" width="600" style="height: 400px; width: 600px;"></canvas>
                     </div>
                 </a>
