differentiated template from page thumbnails

--- a/source/_patterns/02-organisms/01-gallery/00-carousel.mustache
+++ b/source/_patterns/02-organisms/01-gallery/00-carousel.mustache
@@ -3,84 +3,31 @@
         <li class="outOfRange">
             <a href="/albums/5823881448034071153/images/?offset=-14" class="prev">
                     back
-                </a>
+            </a>
         </li>
         <li class="outOfRange pipeDivider"> | </li>
         <li>
             <a href="/albums/5823881448034071153/images/?offset=14" class="more">
                     more
-                </a>
+            </a>
         </li>
     </ul>
+
     <button class="slide-left at-limit"></button>
-    <ul id="thumbs">
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-        <li>{{> atoms-thumbnail }}</li>
-    </ul>
+    <ul id="thumbs">{{# listItems.fifteen }}<li>{{> atoms-thumbnail }}</li>{{/ listItems.fifteen }}</ul>
     <button class="slide-right"></button>
+
     <ul class="pagination thumbnail">
         <li class="outOfRange">
             <a href="/albums/5823881448034071153/images/?offset=-14" class="prev">
                     back
-                </a>
+            </a>
         </li>
         <li class="outOfRange pipeDivider"> | </li>
         <li>
             <a href="/albums/5823881448034071153/images/?offset=14" class="more">
                     more
-                </a>
+            </a>
         </li>
     </ul>
 </div>
