got teh carousel scroll behavior working

--- a/source/_patterns/00-atoms/00-meta/_01-foot.mustache
+++ b/source/_patterns/00-atoms/00-meta/_01-foot.mustache
@@ -8,5 +8,13 @@
 		<script src="/resources/thirdparty/wymeditor/jquery.wymeditor.min.js"> </script>
 		<script src="/resources/thirdparty/travi-core/dist/travi-core.min.js"> </script>
 		<script src="/resources/thirdparty/travi-ui/dist/form.min.js"> </script>
+		<script src="/resources/thirdparty/travi.org-theme/test/stubs/sublimevideo.js"> </script>
+		<script src="/resources/thirdparty/travi.org-theme/thirdparty/lightbox/jquery.lightbox.js"> </script>
+		<script src="/resources/thirdparty/travi.org-theme/js/video/player.js"> </script>
+		<script src="/resources/thirdparty/travi.org-theme/js/photos/carousel.js"> </script>
+		<!-- <script src="/resources/thirdparty/travi.org-theme/js/photos/thumbnails.js"> </script> -->
+	{{# extra.js }}
+		<script src="{{ src }}"> </script>
+	{{/ extra.js}}
 	</body>
 </html>
