got the lightbox working

--- a/source/_patterns/00-atoms/00-meta/_00-head.mustache
+++ b/source/_patterns/00-atoms/00-meta/_00-head.mustache
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="../../css/style.css?{{ cacheBuster }}" media="all" />
         <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Permanent+Marker:regular">
 		<link rel="stylesheet" href="../../css/travi.css?{{ cacheBuster }}" media="all" />
+		<link rel="stylesheet" href="/resources/thirdparty/travi.org-theme/thirdparty/lightbox/css/jquery.lightbox.css?{{ cacheBuster }}" media="all" />
 
 		<script type="text/javascript" src="/resources/thirdparty/travi-styles/dist/css/icons/grunticon.loader.js"> </script>
 		<script>
