--- a/source/_patterns/00-atoms/00-meta/_01-foot.mustache
+++ b/source/_patterns/00-atoms/00-meta/_01-foot.mustache
@@ -1,6 +1,7 @@
 
 	<!--DO NOT REMOVE-->
 	{% pattern-lab-foot %}
+		<script src="/resources/thirdparty/amplify/amplify.core.js"> </script>
 		<script src="/resources/thirdparty/jquery/jquery.js"> </script>
 		<script src="/resources/thirdparty/jquery-ui/jquery-ui.js"> </script>
 		<script src="/resources/thirdparty/jsrender/jsrender.js"> </script>
