--- a/source/_patterns/02-organisms/01-gallery/00-carousel.mustache
+++ b/source/_patterns/02-organisms/01-gallery/00-carousel.mustache
@@ -13,7 +13,7 @@
         </li>
     </ul>
 
-    <ul id="thumbs">{{# listItems.fifteen }}<li>{{> atoms-thumbnail }}</li>{{/ listItems.fifteen }}</ul>
+    <ul id="thumbs">{{# listItems.fifteen }}<li><a href="/images/fpo_4x3.png">{{> atoms-thumbnail }}</a></li>{{/ listItems.fifteen }}</ul>
 
     <ul class="pagination thumbnail">
         <li class="outOfRange">
