enabled the preview image to be loaded from the thumbnails

--- a/source/_patterns/00-atoms/04-images/00-thumbnail.mustache
+++ b/source/_patterns/00-atoms/04-images/00-thumbnail.mustache
@@ -1,1 +1,1 @@
-<img src="{{ img.thumbnail.src }}" alt="{{ img.thumbnail.alt }}" />
+<img src="{{ img.thumbnail.src }}" alt="{{ img.thumbnail.alt }}" data-preview="{{ img.landscape-4x3.src }}" />
