programatically generated the fonts example to close #9

--- a/source/_patterns/00-atoms/01-global/01-fonts.mustache
+++ b/source/_patterns/00-atoms/01-global/01-fonts.mustache
@@ -1,6 +1,10 @@
-<p>Primary font: "HelveticaNeue", "Helvetica", "Arial", sans-serif;</p>
-<p><em>Primary font italic: "HelveticaNeue", "Helvetica", "Arial", sans-serif;</em></p>
-<p><strong>Primary font bold: "HelveticaNeue", "Helvetica", "Arial", sans-serif;</strong></p>
-<p class="font-secondary">Secondary font: Georgia, Times, "Times New Roman", serif;</p>
-<p class="font-secondary"><em>Secondary font italic: Georgia, Times, "Times New Roman", serif;</em></p>
-<p class="font-secondary"><strong>Secondary font bold: Georgia, Times, "Times New Roman", serif;</strong></p>
+{{#fonts}}
+<dl class="inline">
+    <dt>{{name}}</dt>
+        <dd style="font-family: {{value}};">{{value}}</dd>
+    <dt>{{name}} italic</dt>
+        <dd style="font-family: {{value}}; font-style: italic;">{{value}}</dd>
+    <dt>{{name}} bold</dt>
+        <dd style="font-family: {{value}}; font-weight: bold;">{{value}}</dd>
+</dl>
+{{/fonts}}
