--- a/source/_patterns/01-molecules/04-forms/01-comment-form.mustache
+++ b/source/_patterns/01-molecules/04-forms/01-comment-form.mustache
@@ -1,20 +1,13 @@
-<form method="post" action="{{ url }}" class="comment-form">
-	<fieldset>
-		<div class="field-container">
-			<label for="comment-name">Name</label>
-			<input id="comment-name" type="text" placeholder="Enter Your Name" />
-		</div>
-		<div class="field-container">
-			<label for="comment-email">Email</label>
-			<input id="comment-email" type="email" placeholder="Your email address" />
-		</div>
-		<div class="field-container">
-			<label for="comment-url">URL</label>
-			<input id="comment-url" type="url" placeholder="Website if you got one" />
-		</div>
-		<div class="field-container">
-			<label for="comment-field">Comment</label>
-			<textarea id="comment-field" rows="5" placeholder="Write you comment here"></textarea>
-		</div>
-	</fieldset>
-</form>
+<div class="entry">
+	<form method="post" action="{{ url }}" class="comment-form">
+		<fieldset>
+			<legend>Comments</legend>
+			<ol class="fieldList">
+				<li>{{> atoms-text-input }}</li>
+				<li>{{> atoms-email-input }}</li>
+				<li>{{> atoms-url-input }}</li>
+				<li>{{> atoms-text-area }}</li>
+			</ol>
+		</fieldset>
+	</form>
+</div>
