example of the contact form

--- a/source/_patterns/00-atoms/05-forms/00-text-input.mustache
+++ b/source/_patterns/00-atoms/05-forms/00-text-input.mustache
@@ -1,2 +1,2 @@
-<label for="text">{{ inputs.text.label }} <abbr title="Required">*</abbr></label>
+<label for="text">{{ inputs.text.label }}&nbsp;<abbr title="Required">*</abbr></label>
 <input id="text" type="text" placeholder="{{ inputs.text.placeholder }}" class="textInput">
