--- a/source/_patterns/00-atoms/05-forms/01-select-menu.mustache
+++ b/source/_patterns/00-atoms/05-forms/01-select-menu.mustache
@@ -1,12 +1,8 @@
-<fieldset>
-    <div class="field-container">
-        <label for="select">Select</label>
-        <select id="select">
-            <optgroup label="Option Group">
-                <option>Option One</option>
-                <option>Option Two</option>
-                <option>Option Three</option>
-            </optgroup>
-        </select>
-    </div>
-</fieldset>
+<label for="select">{{ inputs.select.label }}</label>
+<select id="select" class="textInput">
+    <optgroup label="Option Group">
+        <option>Option One</option>
+        <option>Option Two</option>
+        <option>Option Three</option>
+    </optgroup>
+</select>
