--- a/source/_patterns/00-atoms/05-forms/00-text-area.mustache
+++ b/source/_patterns/00-atoms/05-forms/00-text-area.mustache
@@ -1,2 +1,2 @@
 <label for="textarea">{{ inputs.textarea.label }}</label>
-<textarea id="textarea" rows="8" cols="48" placeholder="{{ inputs.textarea.placeholder }}" class="textInput"></textarea>
+<textarea id="textarea" rows="{{ inputs.textarea.rows }}" placeholder="{{ inputs.textarea.placeholder }}" class="textInput"></textarea>
