--- a/source/_patterns/00-atoms/05-forms/03-radio-buttons.mustache
+++ b/source/_patterns/00-atoms/05-forms/03-radio-buttons.mustache
@@ -1,8 +1,13 @@
 <fieldset>
     <legend>{{ inputs.radios.label }}</legend>
     <ul class="choices">
-        <li><label for="radio1"><input id="radio1" name="radio" type="radio" class="radio" checked="checked"> Option 1</label></li>
-        <li><label for="radio2"><input id="radio2" name="radio" type="radio" class="radio"> Option 2</label></li>
-        <li><label for="radio3"><input id="radio3" name="radio" type="radio" class="radio"> Option 3</label></li>
+    {{#inputs.radios.choices}}
+        <li>
+            <label>
+                <input name="radio" type="radio" class="radio" checked="checked">
+                {{ label }}
+            </label>
+        </li>
+    {{/inputs.radios.choices}}
     </ul>
 </fieldset>
