got the example artivle page more in line with the theme until i change it to match my article page

--- a/source/_patterns/01-molecules/04-forms/01-comment-form.mustache
+++ b/source/_patterns/01-molecules/04-forms/01-comment-form.mustache
@@ -9,5 +9,8 @@
 				<li>{{> atoms-text-area }}</li>
 			</ol>
 		</fieldset>
+        <ol class="actions">
+            <li>{{> atoms-submit-button }}</li>
+        </ol>
 	</form>
 </div>
