--- a/source/_patterns/02-organisms/03-sections/00-latest-posts.mustache
+++ b/source/_patterns/02-organisms/03-sections/00-latest-posts.mustache
@@ -1,4 +1,4 @@
-<section class="section latest-posts">
+<section class="latest-posts">
 	<h2 class="section-title">Latest Posts</h2>
 	<ul class="post-list">
 		<li>{{> molecules-media-block }}</li>
