--- a/source/_patterns/02-organisms/03-sections/02-related-posts.mustache
+++ b/source/_patterns/02-organisms/03-sections/02-related-posts.mustache
@@ -1,4 +1,4 @@
-<section class="section related-posts">
+<section class="related-posts">
 	<h3 class="section-title">Related Posts</h3>
 	<ul class="headline-list">
 		<li><h4><a href="#">{{ headline.short }}</a></h4></li>
