--- a/source/_patterns/02-organisms/03-sections/01-recent-tweets.mustache
+++ b/source/_patterns/02-organisms/03-sections/01-recent-tweets.mustache
@@ -1,4 +1,4 @@
-<section class="section related-posts">
+<section class="related-posts">
 	<h3 class="section-title">Recent Tweets</h3>
 	<ul class="headline-list">
 		<li><h4><a href="#">Headline Lorem ipsum dolor sit amet</a></h4> {{> atoms-time }}</li>
