some minor cleanup of the radio buttons

--- a/source/_patterns/00-atoms/05-forms/03-radio-buttons.mustache
+++ b/source/_patterns/00-atoms/05-forms/03-radio-buttons.mustache
@@ -4,7 +4,7 @@
     {{#inputs.radios.choices}}
         <li>
             <label>
-                <input name="radio" type="radio" class="radio" checked="checked">
+                <input name="radio" type="radio" class="radio">
                 {{ label }}
             </label>
         </li>
