finished making fields dynamic and populated data in consumers of form partials

--- a/source/_patterns/00-atoms/05-forms/01-select-menu.mustache
+++ b/source/_patterns/00-atoms/05-forms/01-select-menu.mustache
@@ -1,8 +1,7 @@
 <label for="select">{{ inputs.select.label }}</label>
 <select id="select" class="textInput">
-    <optgroup label="Option Group">
-        <option>Option One</option>
-        <option>Option Two</option>
-        <option>Option Three</option>
-    </optgroup>
+    <option value="">Select One</option>
+    {{#inputs.select.choices}}
+        <option>{{ label }}</option>
+    {{/inputs.select.choices}}
 </select>
