pulled a few more of he input examples out individually

--- a/source/_patterns/00-atoms/05-forms/00-text-fields.mustache
+++ b/source/_patterns/00-atoms/05-forms/00-text-fields.mustache
@@ -1,22 +1,5 @@
-<fieldset>
-    <div class="field-container">
-        <label for="password">Password</label>
-        <input id="password" type="password" placeholder="Type your Password">
-    </div>
-    <div class="field-container">
-        <label for="search">Search</label>
-        <input id="search" type="search" placeholder="Enter Search Term">
-    </div>
-    <div class="field-container">
-        <label for="number">Number Input <abbr title="Required">*</abbr></label>
-        <input id="number" type="number" placeholder="Enter a Number" pattern="[0-9]*">
-    </div>
-    <div class="field-container">
-        <label class="error">Error Input</label>
-        <input class="is-error" type="text" placeholder="Text Input">
-    </div>
-    <div class="field-container">
-        <label  class="valid">Valid</label>
-        <input  class="is-valid" type="text" placeholder="Text Input">
-    </div>
-</fieldset>
+<p>
+    To Do: show examples of validation error variations of each field.
+</p>
+<label class="error">Error Input</label>
+<input class="is-error" type="text" placeholder="Text Input">
